--- a/configs/Tanks/Ignatius_ct.yaml
+++ b/configs/Tanks/Ignatius_ct.yaml
@@ -4,18 +4,22 @@ pose:
   learn_pose: True
   layers_feat: [null,256,256,256,256,256,256,256,256] 
   skip: [4]
-  lr_pose: 1.e-3                                          # learning rate of camera poses
+  pose_lr_t: 8.e-5                                          # learning rate of camera poses
   lr_pose_end: 2.e-5                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
-  lr_rots: 1.e-4                                          # learning rate of camera poses
+  pose_lr_r: 4.e-5                                          # learning rate of camera poses
   lr_rots_end: 2.e-6                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
   max_index: 120
+  device: cuda:0
 dataloading:
-  path: data/Tanks
+  path: /cluster/work/cvl/qimaqi/Tanks
   scene: ['Ignatius']
   customized_focal: False
   random_ref: 1
 training:
-  out_dir:  out/Tanks/Ignatius_ct
+  out_dir:  out/Tanks/Ignatius_ct_decouple_pretrain
   auto_scheduler: True
+  # scheduling_epoch: 5000
+  # scheduling_start: 5000
+  # checkpoint_every: 2500
 extract_images:
   resolution: [540, 960]
