--- a/configs/Tanks/Ignatius_ct.yaml
+++ b/configs/Tanks/Ignatius_ct.yaml
@@ -4,19 +4,19 @@ pose:
   learn_pose: True
   layers_feat: [null,256,256,256,256,256,256,256,256] 
   skip: [4]
-  pose_lr_t: 2.e-4                                          # learning rate of camera poses
+  pose_lr_t: 1.e-4                                          # learning rate of camera poses
   lr_pose_end: 2.e-5                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
-  pose_lr_r: 1.e-4                                          # learning rate of camera poses
+  pose_lr_r: 1.e-6                                          # learning rate of camera poses
   lr_rots_end: 2.e-6                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
   max_index: 120
   device: cuda:0
 dataloading:
-  path: /cluster/work/cvl/qimaqi/Tanks
+  path: /SSD1/qimaqi/Tanks
   scene: ['Ignatius']
   customized_focal: False
   random_ref: 1
 training:
-  out_dir:  out/Tanks/Ignatius_ct_decouple_pretrain
+  out_dir:  out/Tanks/Ignatius_ct_decouple_pretrain_quad
   auto_scheduler: True
   # scheduling_epoch: 5000
   # scheduling_start: 5000
