--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -62,8 +62,9 @@ pose:
   fx_only: False
   focal_order: 2
   init_pose_type: gt
-  init_focal_type: gt\
+  init_focal_type: gt
   cam_coord: False
+  scheduler: False
 distortion:
   learn_distortion: True
   fix_scaleN: True
