--- a/configs/Tanks/Ballroom.yaml
+++ b/configs/Tanks/Ballroom.yaml
@@ -3,7 +3,7 @@ depth:
 pose:
   learn_pose: True
 dataloading:
-  path: data/Tanks
+  path: /SSD1/qimaqi/Tanks
   scene: ['Ballroom']
   customized_focal: False
   random_ref: 1
