--- a/configs/Tanks/Ballroom_ct_quad3_ms.yaml
+++ b/configs/Tanks/Ballroom_ct_quad3_ms.yaml
@@ -6,20 +6,20 @@ pose:
   skip: [4]
   pose_lr_t: 1.e-4                                         # learning rate of camera poses
   lr_pose_end: 2.e-5                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
-  pose_lr_r: 6.e-5                                          # learning rate of camera poses
+  pose_lr_r: 5.e-6                                          # learning rate of camera poses
   lr_rots_end: 2.e-6                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
-  max_index: 120
+  max_index: 150
   device: cuda:0
-  memorize: False
+  memorize: True
+  scheduler: True
 dataloading:
   path: /SSD1/qimaqi/Tanks
-  scene: ['Ignatius']
+  scene: ['Ballroom']
   customized_focal: False
   random_ref: 1
 training:
-  out_dir:  out/Tanks/Ignatius_ct_so3_nom_s_r
+  out_dir:  out/Tanks/Ballroom_ct_quad3_ms
   auto_scheduler: True
-  regularize: True
+  regularize: False
 extract_images:
   resolution: [540, 960]
-  model_file_pose: ''
