so3 works better

--- a/configs/Tanks/rebuttal/Horse/Horse_ours_skip2.yaml
+++ b/configs/Tanks/rebuttal/Horse/Horse_ours_skip2.yaml
@@ -5,7 +5,7 @@ pose:
   learn_pose: True
   layers_feat: [null,256,256,256,256,256,256,256,256] 
   skip: [4]
-  pose_lr_t: 5.e-5                                         # learning rate of camera poses
+  pose_lr_t: 5.e-4                                         # learning rate of camera poses
   lr_pose_end: 2.e-5                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
   pose_lr_r: 2.e-5                                          # learning rate of camera poses
   lr_rots_end: 2.e-6                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
@@ -14,15 +14,14 @@ pose:
   memorize: False
 dataloading:
   skip: 2
-  path: /workspace/eth/datasets/Tanks
+  path: /SSD1/qimaqi/Tanks
   scene: ['Horse']
   customized_focal: False
   random_ref: 1
 training:
-  out_dir:  out/Tanks/rebuttal/R_Horse_ours_skip2_quad4
+  out_dir:  out/Tanks/rebuttal/R_Horse_ours_skip2_quad4_mem
   auto_scheduler: True
   regularize: True
-  # clip_grad: 1.0
-  # clip_start: 20000
+  memorize: True
 extract_images:
   resolution: [540, 960]
