--- a/configs/Tanks/rebuttal/Ignatius/Ignatius_ours_so3_skip4.yaml
+++ b/configs/Tanks/rebuttal/Ignatius/Ignatius_ours_so3_skip4.yaml
@@ -5,9 +5,9 @@ pose:
   learn_pose: True
   layers_feat: [null,256,256,256,256,256,256,256,256] 
   skip: [4]
-  pose_lr_t: 5.e-4                                         # learning rate of camera poses
+  pose_lr_t: 5.e-5                                         # learning rate of camera poses
   lr_pose_end: 2.e-5                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
-  pose_lr_r: 5.e-5                                          # learning rate of camera poses
+  pose_lr_r: 5.e-5                                         # learning rate of camera poses
   lr_rots_end: 2.e-6                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
   max_index: 30
   device: cuda:0
@@ -19,11 +19,11 @@ dataloading:
   customized_focal: False
   random_ref: 1
 training:
-  out_dir:  out/Tanks/rebuttal/R_Ignatius_ours_skip4_so3
+  out_dir:  out/Tanks/rebuttal/R_Ignatius_ours_skip4_so3_run0
   auto_scheduler: True
-  regularize: True
   memorize: True
-  regularize: True
+  memorize_start: 5000
+  regularize: False
 
 extract_images:
   resolution: [540, 960]
