--- a/configs/Tanks/rebuttal/Ignatius/Ignatius_ours_quad4_skip4.yaml
+++ b/configs/Tanks/rebuttal/Ignatius/Ignatius_ours_quad4_skip4.yaml
@@ -5,7 +5,7 @@ pose:
   learn_pose: True
   layers_feat: [null,256,256,256,256,256,256,256,256] 
   skip: [4]
-  pose_lr_t: 5.e-4                                         # learning rate of camera poses
+  pose_lr_t: 5.e-5                                         # learning rate of camera poses
   lr_pose_end: 2.e-5                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
   pose_lr_r: 5.e-5                                          # learning rate of camera poses
   lr_rots_end: 2.e-6                                      # terminal learning rate of camera poses (only used with sched_pose.type=ExponentialLR)
@@ -19,10 +19,11 @@ dataloading:
   customized_focal: False
   random_ref: 1
 training:
-  out_dir:  out/Tanks/rebuttal/R_Ignatius_ours_skip4_quad4_mem
+  out_dir:  out/Tanks/rebuttal/R_Ignatius_ours_skip4_quad4_mem_rerun1
   auto_scheduler: True
   regularize: True
   memorize: True
+  memorize_start: 0
 
 extract_images:
   resolution: [540, 960]
