--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -72,6 +72,7 @@ distortion:
   learn_shift: True
 training:
   memorize: False
+  memorize_start: 0
   type: nope_nerf
   load_dir: model.pt
   load_pose_dir: model_pose.pt
