--- a/configs/Tanks/Francis.yaml
+++ b/configs/Tanks/Francis.yaml
@@ -10,5 +10,6 @@ dataloading:
 training:
   out_dir:  out/Tanks/Francis
   auto_scheduler: True
+  scheduling_epoch: 5000
 extract_images:
   resolution: [540, 960]
