--- a/configs/Tanks/Ignatius.yaml
+++ b/configs/Tanks/Ignatius.yaml
@@ -3,12 +3,13 @@ depth:
 pose:
   learn_pose: True
 dataloading:
-  path: /SSD1/qimaqi/Tanks
+  path: ./data/Tanks
   scene: ['Ignatius']
   customized_focal: False
   random_ref: 1
 training:
-  out_dir:  out/Tanks/Ignatius_debug_0
+  out_dir: ./out/Tanks/Ignatius_baseline_0
   auto_scheduler: True
+  scheduling_epoch: 5000
 extract_images:
   resolution: [540, 960]
